--- a/reports/sphere_dipole_source/Makefile
+++ b/reports/sphere_dipole_source/Makefile
@@ -1,8 +1,11 @@
 WS = wolframscript -f
 LATEXMK = latexmk -use-make -g -lualatex
 
-SPHERE_DIPOLE_SOURCE_FIGURE_FILENAMES = plot1to5.jpg plot5to8.jpg plot8to10.jpg sphereDipolePercentDifferences.jpg
-SPHERE_DIPOLE_SOURCE_FIGURES = $(addprefix figures/, $(SPHERE_DIPOLE_SOURCE_FIGURE_FILENAMES))
+BZ_ALONG_X_FIGURE_FILENAMES = plot1to5.jpg plot5to8.jpg plot8to10.jpg sphereDipolePercentDifferences.jpg
+BZ_ALONG_X_FIGURES = $(addprefix figures/bZAlongX, $(BZ_ALONG_X_FIGURES_FILENAMES))
+
+BZ_ALONG_X_CALCS_FILENAMES = sphereBZalongXDipoleLowRes.csv sphereBZalongXUniform.csv sphereBZalongXDipoleHighRes.csv
+BZ_ALONG_X_CALCS = $(addprefix calc/, $(BZ_ALONG_X_CALCS_FILENAMES))
 
 all: ../output/sphere_dipole_source.pdf
 
@@ -14,9 +17,12 @@ clean:
 
 .PHONY: all clean
 
-sphere_dipole_source.pdf: sphere_dipole_source.tex $(SPHERE_DIPOLE_SOURCE_FIGURES)
+sphere_dipole_source.pdf: sphere_dipole_source.tex $(BZ_ALONG_X_FIGURES)
 	$(LATEXMK) sphere_dipole_source.tex
 
 # sphere dipole source rules
-$(SPHERE_DIPOLE_SOURCE_FIGURES): scripts/sphereBPlots.wls
-	$(WS) scripts/sphereBPlots.wls
+$(SPHERE_DIPOLE_SOURCE_FIGURES): scripts/sphereBZAlongXPlots.wls $(BZ_ALONG_X_CALCS)
+	$(WS) scripts/sphereBZAlongXPlots.wls
+
+$(BZ_ALONG_X_CALCS): scripts/sphereBZAlongXCalcs.wls
+	$(WS) scripts/sphereBZAlongXCalcs.wls
