Added cylinder uniform z calc

--- a/reports/cylinder_calc/Makefile
+++ b/reports/cylinder_calc/Makefile
@@ -1,5 +1,12 @@
 WS = wolframscript -f
 LATEXMK = latexmk -use-make -g -lualatex
 
-all:
-	@echo "In cylinder_calc"
+all: figures/cylinderBZalongZUniformZ.jpg
+
+.PHONY: all
+
+figures/cylinderBZalongZUniformZ.jpg: calc/cylinderBZalongZUniformZ.csv scripts/cylinderBZalongZUniformZPlot.wls
+	$(WS) scripts/cylinderBZalongZUniformZPlot.wls
+
+calc/cylinderBZalongZUniformZ.csv: scripts/cylinderBZalongZUniformZCalc.wls
+	$(WS) scripts/cylinderBZalongZUniformZCalc.wls
